# CUDA-L5

./: .gitignore  CMakeLists.txt
DATA_ROOT/orgs/test_org/: meta.sqlite
DATA_ROOT/orgs/test_org/index/: level5_manifest.json
DATA_ROOT/orgs/test_org/index/seg_20251225_113755/: index_native_docids.json  index_native_meta.json
DATA_ROOT/orgs/test_org/uploads/: 70917e33-4c5b-e67f-c00c-e46d4d27acea_a.txt
build_asan/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
cpp/common/: text_common.cpp  text_common.h
cpp/include/l5/: builder.h  docinfo.h  errors.h  format.h  manifest.h  query.h  reader.h  result.h  search_multi.h  search_segment.h  validator.h
cpp/service/: extractor.cpp  extractor.h  main.cpp  service.cpp  service.h  storage.cpp  storage.h  tombstone.cpp  tombstone.h
cpp/src/: builder.cpp  format.cpp  manifest.cpp  query.cpp  reader.cpp  result.cpp  search_multi.cpp  search_segment.cpp  validator.cpp
cpp/tests/: runner.txt  test_build_smoke.cpp  test_search_smoke.cpp  test_validate.cpp
cpp/tests/data/: corpus_100.jsonl  corpus_50_long.jsonl  tiny.jsonl
cpp/tools/: l5_build_main.cpp  l5_search_main.cpp  l5_validate_main.cpp
runtime/l5_out/: level5_manifest.json
runtime/l5_out/seg_100/: index_native_docids.json  index_native_meta.json
runtime/l5_out/seg_50_long/: index_native_docids.json  index_native_meta.json
